# simple-message-handler

./: .coverage  .env.example  .gitignore  Makefile  README.md  api_mocks.json  docker-compose.yml  localstack.sh  message_publisher.py  pyproject.toml
loafer_handler/: __main__.py  clients.py  config.py  handler.py  logger.py  models.py  routes.py
tests/: conftest.py  test_order_canceled_handler.py
