[tool.poetry]
name = "loafer-handler"
version = "0.1.0"
description = ""
authors = ["rafael.emery <rafael.emery@olist.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loafer = "^2.0.1"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
requests = "^2.32.3"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
